--- a/chika.css
+++ b/chika.css
@@ -1,136 +1,190 @@
 /*Body style*/
+
 body {
-	background-color: #B0C4DE;
+    background-color: #B0C4DE;
 }
+
 
 /*H1 style*/
+
 #OCC {
-	text-align: justify-all;
-	color: blue;
-	background-color: white;
-	border: 1px solid blue;
-	border-radius: 5px;
-	margin-left: 455px;
-	margin-right: 455px;
-	padding: 5px;
+    color: blue;
+    background-color: white;
+    border: 1px solid blue;
+    border-radius: 5px;
+    margin-left: 455px;
+    margin-right: 455px;
+    padding: 5px;
 }
+
 
 /*Address Div style*/
+
 #div1 {
-	font-weight: bold;
-	background-color: white;
-	border: 1px solid blue;
-	border-radius: 7px;
-	margin-left: 168px;
-	margin-right: 168px;
+    font-weight: bold;
+    background-color: white;
+    border: 1px solid blue;
+    border-radius: 7px;
+    margin-left: 168px;
+    margin-right: 168px;
 }
+
 
 /*Bookmarks style*/
+
 a {
-	background-color: white;
-	border: 1px solid blue;
-	border-radius: 4px;
+    background-color: white;
+    border: 1px solid blue;
+    border-radius: 4px;
 }
+
 
 /*link*/
+
 a:link {
-  color: red;
-  text-decoration: none;
+    color: red;
+    text-decoration: none;
 }
+
 
 /* visited link */
+
 a:visited {
-  color: green;
-  text-decoration: none;
+    color: green;
+    text-decoration: none;
 }
+
 
 /* mouse over link */
+
 a:hover {
-  color: hotpink;
-  text-decoration: underline;
+    color: hotpink;
+    text-decoration: underline;
 }
+
 
 /* selected link */
+
 a:active {
-  color: blue;
-  text-decoration: underline;
+    color: blue;
+    text-decoration: underline;
 }
+
 
 /*Image style*/
+
 #img1 {
-	border: 1px blue solid;
-	border-radius: 10px;
+    border: 1px blue solid;
+    border-radius: 10px;
 }
 
+
 /*Horizontal rule style*/
+
 hr {
-	border: white solid 0.5px;
+    border: white solid 0.5px;
 }
+
+
+/*Career summary styling*/
+
 #sp1 {
-	background-color: white;
+    background-color: white;
 }
+
+
+/*Details background styling*/
+
 #dt {
-	background-color: white;
-	border: 1px solid blue;
-	border-radius: 5px;
-	padding-left: 5px;
-	margin: 10px;
+    background-color: white;
+    border: 1px solid blue;
+    border-radius: 5px;
+    padding-left: 5px;
+    margin: 10px;
 }
+
+
+/*Personal data styling*/
+
 pre {
-	font-size: 13.5px;
-	background-color: white;
-	border: 1px blue solid;
-	margin: 10px;
-	border-radius: 8px;
-	padding: 10px;
+    font-size: 13.5px;
+    background-color: white;
+    border: 1px blue solid;
+    margin: 10px;
+    border-radius: 8px;
+    padding: 10px;
 }
+
+
+/* h3 headings styling*/
+
 h3 {
-	color: blue;
-	text-align: center;
-	background-color: white;
-	max-width: 200px;
-	border: solid 1px blue;
-	border-radius: 5px;
+    color: blue;
+    text-align: center;
+    background-color: white;
+    max-width: 200px;
+    border: solid 1px blue;
+    border-radius: 5px;
 }
+
+
+/*List styling*/
+
 ul {
-	background-color: white;
-	border: blue 1px solid;
-	border-radius: 7px;
-	padding: 10px;
-	margin: 10px;
-	list-style-type: circle;
-	list-style-position: inside;
+    background-color: white;
+    border: blue 1px solid;
+    border-radius: 7px;
+    padding: 10px;
+    margin: 10px;
+    list-style-type: circle;
+    list-style-position: inside;
 }
+
+
+/*table styling*/
+
 table {
-	background-color: white;
-	height: 100px;
-	border: solid 1px blue;
-	border-radius: 6px; 
-	margin: 10px;
-	padding: 1px;
+    background-color: white;
+    height: 100px;
+    border: solid 1px blue;
+    border-radius: 6px;
+    margin: 10px;
+    padding: 1px;
 }
+
 th {
-	background-color: #7B68EE;
-	height: 50px;
+    background-color: #7B68EE;
+    height: 50px;
 }
+
 td {
-	text-align: justify-all;
-	height: 30px;
-	padding: 5px;
+    text-align: justify-all;
+    height: 30px;
+    padding: 5px;
 }
+
 tr:hover {
-	background-color: #663399;
+    background-color: #663399;
 }
+
 tr:nth-child(even) {
-	background-color: #6495ED;
+    background-color: #6495ED;
 }
+
+
+/*Referee DIv styling*/
+
 #divR {
-	background-color: white;
-	border: 1px solid blue;
-	border-radius: 7px;
-	padding-left: 5px;
-	margin: 10px;
+    background-color: white;
+    border: 1px solid blue;
+    border-radius: 7px;
+    padding-left: 5px;
+    margin: 10px;
 }
+
+
+/*progress bar styling*/
+
 .pro {
-	margin-left: 20px;
+    margin-left: 20px;
 }
