--- a/chika.css
+++ b/chika.css
@@ -188,3 +188,20 @@ tr:nth-child(even) {
 .pro {
     margin-left: 20px;
 }
+
+
+/*Contact form submit button styling*/
+
+#btn {
+    font-weight: bold;
+    font-size: 15px;
+    color: blue;
+    text-align: center;
+    background-color: white;
+    height: 30px;
+    width: 150px;
+    border: solid 1px blue;
+    border-radius: 3px;
+    margin-top: 8px;
+    margin-left: 10px;
+}
